kubernetes-old/authelia/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: authelia
  labels:
    app: authelia
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authelia
  template:
    metadata:
      labels:
        app: authelia
    spec:
      enableServiceLinks: false
      containers:
      - name: authelia
        image: authelia/authelia:latest
        ports:
        - containerPort: 9091
        volumeMounts:
          - name: config
            mountPath: /config
          - name: secret-volume
            mountPath: /secrets
            readOnly: true
      volumes:
      - name: config-template
        configMap:
          name: authelia-config
          items:
            - key: configuration.tpl.yml
              path: configuration.tpl.yml
      - name: config
        emptyDir: {}
      - name: secret-volume
        secret:
          secretName: authelia
