kubernetes-old/authelia/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: authelia
spec:
  selector:
    app: authelia
  ports:
  - name: http
    port: 9091
    targetPort: 9091
    protocol: TCP
