kubernetes-old/authelia/ingress.yaml
---
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: authelia
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`login.efym.net`)
      kind: Rule
      services:
        - name: authelia
          port: 9091
  tls:
    secretName: efym-net-tls
